<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/BuildWorkoutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:text="@string/BuildExerciseTitle"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/AddExerciseButton"
        android:layout_width="325dp"
        android:layout_height="55dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:text="@string/AddAnExercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/BuildWorkoutButton"
        android:layout_width="325dp"
        android:layout_height="55dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:text="@string/SaveTheWorkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddExerciseButton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:text="@string/UserInputTitle"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/NewWorkoutTitleEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BuildWorkoutTitle" />

    <EditText
        android:id="@+id/NewWorkoutTitleEditText"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/BuildWorkoutTitle" />

</android.support.constraint.ConstraintLayout>